删除两个冗余文件

--- a/bin-debug/MyJPGTest.html
+++ b/bin-debug/MyJPGTest.html
@@ -37,7 +37,7 @@
         <script type="text/javascript" src="swfobject.js"></script>
         <script type="text/javascript">
             // For version detection, set to min. required Flash Player version, or 0 (or 0.0.0), for no version detection. 
-            var swfVersionStr = "11.4.0";
+            var swfVersionStr = "11.1.0";
             // To use express install, set to playerProductInstall.swf, otherwise the empty string. 
             var xiSwfUrlStr = "playerProductInstall.swf";
             var flashvars = {};
@@ -46,13 +46,14 @@
             params.bgcolor = "#ffffff";
             params.allowscriptaccess = "sameDomain";
             params.allowfullscreen = "true";
+            params.wmode = "direct";
             var attributes = {};
-            attributes.id = "WorkerTest";
-            attributes.name = "WorkerTest";
+            attributes.id = "MyJPGTest";
+            attributes.name = "MyJPGTest";
             attributes.align = "middle";
             swfobject.embedSWF(
-                "WorkerTest.swf", "flashContent", 
-                "100%", "100%", 
+                "MyJPGTest.swf", "flashContent", 
+                "800", "600", 
                 swfVersionStr, xiSwfUrlStr, 
                 flashvars, params, attributes);
             // JavaScript enabled so display the flashContent div in case it is not replaced with a swf object.
@@ -67,7 +68,7 @@
         <div id="flashContent">
             <p>
                 To view this page ensure that Adobe Flash Player version 
-                11.4.0 or greater is installed. 
+                11.1.0 or greater is installed. 
             </p>
             <script type="text/javascript"> 
                 var pageHost = ((document.location.protocol == "https:") ? "https://" : "http://"); 
@@ -77,14 +78,14 @@
         </div>
         
         <noscript>
-            <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="100%" height="100%" id="WorkerTest">
-                <param name="movie" value="WorkerTest.swf" />
+            <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="800" height="600" id="MyJPGTest">
+                <param name="movie" value="MyJPGTest.swf" />
                 <param name="quality" value="high" />
                 <param name="bgcolor" value="#ffffff" />
                 <param name="allowScriptAccess" value="sameDomain" />
                 <param name="allowFullScreen" value="true" />
                 <!--[if !IE]>-->
-                <object type="application/x-shockwave-flash" data="WorkerTest.swf" width="100%" height="100%">
+                <object type="application/x-shockwave-flash" data="MyJPGTest.swf" width="800" height="600">
                     <param name="quality" value="high" />
                     <param name="bgcolor" value="#ffffff" />
                     <param name="allowScriptAccess" value="sameDomain" />
@@ -93,7 +94,7 @@
                 <!--[if gte IE 6]>-->
                     <p> 
                         Either scripts and active content are not permitted to run or Adobe Flash Player version
-                        11.4.0 or greater is not installed.
+                        11.1.0 or greater is not installed.
                     </p>
                 <!--<![endif]-->
                     <a href="http://www.adobe.com/go/getflashplayer">
